--- a/.config/xfce4/panel/whiskermenu-1.rc
+++ b/.config/xfce4/panel/whiskermenu-1.rc
@@ -1,12 +1,12 @@
-favorites=firefox.desktop,svp-manager4.desktop,pamac-updater.desktop,htop.desktop
-recent=xfce-session-settings.desktop,htop.desktop,xfce-wmtweaks-settings.desktop,xfce-wm-settings.desktop,conky-manager.desktop,ranger.desktop,xfce4-terminal-settings.desktop,xfce-keyboard-settings.desktop,xfce4-clipman.desktop,conky.desktop
-button-icon=distributor-logo-archlinux
-button-single-row=false
+favorites=simplescreenrecorder.desktop,tint2conf.desktop
+recent=tint2conf.desktop,xfce-keyboard-settings.desktop
+button-icon=archlinux
+button-single-row=true
 show-button-title=false
 show-button-icon=true
-launcher-show-name=false
+launcher-show-name=true
 launcher-show-description=false
-launcher-show-tooltip=false
+launcher-show-tooltip=true
 item-icon-size=0
 hover-switch-category=false
 category-show-name=true
@@ -20,28 +20,28 @@ position-search-alternate=true
 position-commands-alternate=true
 position-categories-alternate=true
 stay-on-focus-out=false
-confirm-session-command=true
-menu-width=573
-menu-height=544
-menu-opacity=95
+confirm-session-command=false
+menu-width=553
+menu-height=530
+menu-opacity=100
 command-settings=xfce4-settings-manager
 show-command-settings=true
 command-lockscreen=xflock4
-show-command-lockscreen=true
+show-command-lockscreen=false
 command-switchuser=gdmflexiserver
 show-command-switchuser=false
 command-logoutuser=xfce4-session-logout --logout --fast
-show-command-logoutuser=false
+show-command-logoutuser=true
 command-restart=xfce4-session-logout --reboot --fast
-show-command-restart=false
+show-command-restart=true
 command-shutdown=xfce4-session-logout --halt --fast
-show-command-shutdown=false
+show-command-shutdown=true
 command-suspend=xfce4-session-logout --suspend
 show-command-suspend=false
 command-hibernate=xfce4-session-logout --hibernate
 show-command-hibernate=false
 command-logout=xfce4-session-logout
-show-command-logout=true
+show-command-logout=false
 command-menueditor=menulibre
 show-command-menueditor=true
 command-profile=mugshot
