--- a/.config/autostart/plank.desktop
+++ b/.config/autostart/plank.desktop
@@ -2,11 +2,10 @@
 Encoding=UTF-8
 Version=0.9.4
 Type=Application
-Name=volumeicon
-Comment=
-Exec=volumeicon
+Name=plank
+Comment=plank
+Exec=plank
 OnlyShowIn=XFCE;
-RunHook=0
 StartupNotify=false
 Terminal=false
 Hidden=true
