--- a/.config/spicetify/Themes/Dribbblish/color.ini
+++ b/.config/spicetify/Themes/Dribbblish/color.ini
@@ -142,8 +142,8 @@ miscellaneous_hover_bg                = BF616A
 preserve_1                            = D8DEE9
 
 [horizon]
-; Horizon Pallete   : #D4516f #F09383 #FAC29A #1D8991 #B877DB 
-; Miscellaneous     : #F9CEC3 #6C6F93 #474A60 #232530 #1A1C23 
+; Horizon Pallete   : #D4516f #F09383 #FAC29A #1D8991 #B877DB
+; Miscellaneous     : #F9CEC3 #6C6F93 #474A60 #232530 #1A1C23
 main_fg                               = 1D8991
 main_bg                               = 232530
 secondary_fg                          = F9CEC3
@@ -212,3 +212,19 @@ indicator_fg_and_button_bg            = 6F3C89
 miscellaneous_bg                      = 6F3C89
 miscellaneous_hover_bg                = DEDEDE
 preserve_1                            = EBDFFF
+
+[beach-sunset]
+main_fg                               = c98430
+active_control_fg                     = c98430
+secondary_fg                          = F0F0F0
+secondary_bg                          = bd3e3e
+main_bg                               = 262626
+sidebar_and_player_bg                 = 262626
+scrollbar_fg_and_selected_row_bg      = 313235
+sidebar_indicator_and_hover_button_bg = bd3e3e
+miscellaneous_bg                      = 313235
+pressing_fg                           = c98430
+miscellaneous_bg                      = 262626
+miscellaneous_hover_bg                = bd3e3e
+indicator_fg_and_button_bg            = c98430
+preserve_1                            = FFF
