--- a/.config/spicetify/Extracted/Raw/legacy-lyrics/manifest.json
+++ b/.config/spicetify/Extracted/Raw/legacy-lyrics/manifest.json
@@ -1,5 +1,5 @@
 {
-  "BundleIdentifier": "full-screen-modal",
+  "BundleIdentifier": "legacy-lyrics",
   "BundleType": "Application",
   "BundleVersion": "1.1.42",
   "VendorIdentifier": "com.spotify",
@@ -33,32 +33,32 @@
     "ms": ""
   },
   "AppName": {
-    "en": "Full Screen Modal",
-    "ar": "Full Screen Modal",
-    "cs": "Full Screen Modal",
-    "de": "Full Screen Modal",
-    "el": "Full Screen Modal",
-    "es": "Full Screen Modal",
-    "es-419": "Full Screen Modal",
-    "fi": "Full Screen Modal",
-    "fr": "Full Screen Modal",
-    "fr-CA": "Full Screen Modal",
-    "he": "Full Screen Modal",
-    "hu": "Full Screen Modal",
-    "id": "Full Screen Modal",
-    "it": "Full Screen Modal",
-    "ja": "Full Screen Modal",
-    "ko": "Full Screen Modal",
-    "nl": "Full Screen Modal",
-    "pl": "Full Screen Modal",
-    "pt-BR": "Full Screen Modal",
-    "ru": "Full Screen Modal",
-    "sv": "Full Screen Modal",
-    "th": "Full Screen Modal",
-    "tr": "Full Screen Modal",
-    "vi": "Full Screen Modal",
-    "zh-Hant": "Full Screen Modal",
-    "ms": "Full Screen Modal"
+    "en": "Legacy Lyrics",
+    "ar": "Legacy Lyrics",
+    "cs": "Legacy Lyrics",
+    "de": "Legacy Lyrics",
+    "el": "Legacy Lyrics",
+    "es": "Legacy Lyrics",
+    "es-419": "Legacy Lyrics",
+    "fi": "Legacy Lyrics",
+    "fr": "Legacy Lyrics",
+    "fr-CA": "Legacy Lyrics",
+    "he": "Legacy Lyrics",
+    "hu": "Legacy Lyrics",
+    "id": "Legacy Lyrics",
+    "it": "Legacy Lyrics",
+    "ja": "Legacy Lyrics",
+    "ko": "Legacy Lyrics",
+    "nl": "Legacy Lyrics",
+    "pl": "Legacy Lyrics",
+    "pt-BR": "Legacy Lyrics",
+    "ru": "Legacy Lyrics",
+    "sv": "Legacy Lyrics",
+    "th": "Legacy Lyrics",
+    "tr": "Legacy Lyrics",
+    "vi": "Legacy Lyrics",
+    "zh-Hant": "Legacy Lyrics",
+    "ms": "Legacy Lyrics"
   },
   "SupportedLanguages": [
     "ar",
