--- a/.config/xfce4/desktop/icons.screen0-1904x1038.rc
+++ b/.config/xfce4/desktop/icons.screen0-1904x1038.rc
@@ -1,27 +1,31 @@
 [xfdesktop-version-4.10.3+-rcfile_format]
 4.10.3+=true
 
-[/home/mxn/Рабочий стол/акк али кулон]
-row=0
-col=3
+[/home/mxn/Рабочий стол/my-ublock-backup_2020-10-28_20.06.39.txt]
+row=1
+col=0
+
+[/home/mxn/Рабочий стол/Dark-Reader-Settings.json]
+row=4
+col=0
+
+[/home/mxn/Рабочий стол/FoxyProxy Standard_2020-10-28.json]
+row=3
+col=0
 
 [/home/mxn/Рабочий стол/creio dots master .config-tint2.zip]
 row=2
 col=0
 
-[/home/mxn/Рабочий стол/акк бт адаптера]
+[/home/mxn/Рабочий стол/Всё]
 row=0
-col=2
-
-[/home/mxn/Рабочий стол/launchy.tint2rc]
-row=1
 col=0
 
 [/home/mxn/Рабочий стол/text]
 row=0
 col=1
 
-[/home/mxn/Рабочий стол/Всё]
-row=0
+[/home/mxn/Рабочий стол/dots]
+row=5
 col=0
 
