--- a/.xxkbrc
+++ b/.xxkbrc
@@ -16,3 +16,4 @@ XXkb.mainwindow.label.font: -misc-*-r-*-14-*
 XXkb.mainwindow.label.text.1: En
 XXkb.mainwindow.label.text.2: Ru
 XXkb.mainwindow.label.enable: yes
+test
